Update deployment image to version 9

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: fatima021/ultimate-cicd-demo:replaceImageTag
+        image: fatima021/ultimate-cicd-demo:9
         ports:
         - containerPort: 8080
